[package]
name = "rustpress-auth"
version = "1.0.0"
edition = "2021"
description = "Core authentication plugin for RustPress - JWT, password hashing, session management"
license = "MIT"
authors = ["RustPress Team"]
repository = "https://github.com/rustpress-net/rustpress-auth"
keywords = ["authentication", "jwt", "rustpress", "plugin"]
categories = ["authentication", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
rand = { version = "0.8", features = ["std_rng"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
